# TaskManager

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
task_manager/: db.sqlite3  manage.py
task_manager/config/: settings.py  urls.py
task_manager/tasks/: admin.py  serializers.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/models/: base.py  task.py
